# semantic-kw-cluster-v2

./: .gitignore  LICENSE  README.md  app.py  clustering.py  embeddings.py  export_pdf.py  nltk_download.py  preprocessing.py  pyproject.toml  requirements.txt  setup.py  ui.py  utils.py
data/: sample_keywords.csv
data/samples/: sample_keywords.csv
docs/: development.md  usage.md
scripts/: install_models.py
semantic_clustering/: app.py  init.py  utils.py
semantic_clustering/clustering/: __init__.py  algorithms.py  embeddings.py  evaluation.py
semantic_clustering/export/: __init__.py  excel.py  html.py  json.py  pdf.py
semantic_clustering/nlp/: init.py  intent.py  models.py  preprocessing.py
tests/: __init__.py  test_clustering.py  test_export.py  test_nlp.py
utils/: __init__.py  clustering.py  embedding.py  intent.py  naming.py  preprocessing.py  visualization.py
