[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-keyword-clustering"
version = "0.1.0"
description = "Advanced Semantic Keyword Clustering Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Max Sanchez", email = "maximo.sanchez@feverup.com"}
]
keywords = ["nlp", "clustering", "seo", "keywords", "semantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.0",
    "plotly>=5.18.0",
    "nltk>=3.8.1",
    "textblob>=0.17.1",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
openai = [
    "openai>=1.8.0",
]
spacy = [
    "spacy>=3.7.0",
]
export = [
    "reportlab>=3.6.12",
    "pillow>=9.3.0",
    "kaleido>=0.2.1",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
full = [
    "openai>=1.8.0",
    "spacy>=3.7.0",
    "reportlab>=3.6.12",
    "pillow>=9.3.0",
    "kaleido>=0.2.1",
    "openpyxl>=3.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/semantic-keyword-clustering"
"Bug Tracker" = "https://github.com/yourusername/semantic-keyword-clustering/issues"
"Documentation" = "https://github.com/yourusername/semantic-keyword-clustering#readme"

[project.scripts]
semantic-clustering = "semantic_clustering.app:main"

[tool.setuptools]
packages = [
    "semantic_clustering",
    "semantic_clustering.nlp",
    "semantic_clustering.clustering",
    "semantic_clustering.export"
]

[tool.setuptools.package-data]
semantic_clustering = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["semantic_clustering"]
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=semantic_clustering --cov-report=term-missing"
